fixed add video and edit video form info to be aligned left

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,9 +138,6 @@ body {
     color: white;
 }
 
-.form-group {
-    text-align: center;
-}
 /*----------------------------Container----------------- */
 .container {
     padding-top: 2%;
